# fast-murmurhash3

./: .gitignore  fast-murmurhash3.cabal
bench/: BenchMemory.hs  BenchTime.hs
src/Data/Digest/: MurmurHash3.hs
src/Data/Digest/MurmurHash3/X86/: Word128.hs  Word32.hs
src/fast-murmurhash3-indef/Data/Digest/MurmurHash3/X86/: Word32.hs
src/word-array-bytestring/: WordArray.hs
src/word-array-bytestring/WordArray/: ByteString.hs
test/: Main.hs
