name: fast-murmurhash3
version: 0.1
build-type: Simple
cabal-version: >= 2.0

library
  build-depends:
      fast-murmurhash3-indef
    , word-array-bytestring
  reexported-modules:
    Data.Digest.MurmurHash3

library fast-murmurhash3-indef
  hs-source-dirs: src/fast-murmurhash3-indef
  signatures: WordArray
  build-depends:
    base >= 4.3 && < 5
  exposed-modules:
    Data.Digest.MurmurHash3
  other-modules:
    Data.Digest.MurmurHash3.X86.Word32
  default-language: Haskell2010

library word-array-bytestring
  hs-source-dirs: src/word-array-bytestring
  build-depends:
      base >= 4.3 && < 5
    , bytestring
  exposed-modules:
    WordArray

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , bytestring
    , Dish
    , fast-murmurhash3
    , murmur3
    , QuickCheck
  default-language: Haskell2010

benchmark bench-time
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: BenchTime.hs
  build-depends:
      base
    , bytestring
    , Dish
    , fast-murmurhash3
    , gauge
    , murmur3
    , random
  default-language: Haskell2010

benchmark bench-memory
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: BenchMemory.hs
  build-depends:
      base
    , bytestring
    , Dish
    , fast-murmurhash3
    , murmur3
    , weigh
  default-language: Haskell2010
